# shopp

./: .gitignore  Cargo.toml  Dockerfile
.github/workflows/: rust.yml
.sqlx/: query-011ca62fe2f19ca85b4855be9cc35ba188566ea3d7cd69b9c9c08940bf7f01df.json  query-081b26f2f61453f805827fc3eaf132321257255352455f6eb36ba03d1ec64c16.json  query-3fab4e30c3cc94089b0cc3c29e8b1fcfd1dccbdbb14db9448840f227eb54e159.json  query-959aa744f5599b248c3940753be17897b6e75a4b150fdc235f5b6b8946babad9.json  query-c01ac4bb717d3ca8a9f5c12898433e7753f5a7a3d1a33170913fc9c34dd8348c.json  query-e970986146d95223ac2d3a531d20175ad54be517ae6288167b52c58e7485c4ad.json  query-ebde3ad587bcb78f5e8a7b0007b253bfa7935829e04fc3df855b84197f6d01b6.json
.well-known/pki-validation/: F869CD1139C38B7BA4ACB9BA1DEDD637.txt
entity/src/: prelude.rs  product.rs  product_category.rs
entity/src/entities/: category.rs
migration/: Cargo.toml
migration/entity/src/entities/: category.rs  media_set.rs  mod.rs  prelude.rs  product.rs  sea_orm_active_enums.rs  sku.rs  sku_translation.rs  slug.rs
migration/src/: lib.rs  m20220101_000001_create_table.rs  m20240517_0002_create_product_table.rs  m20240517_0003_create_product_to_category_table.rs  m20240517_0004_create_itemtype_enum.rs  m20240522_0009_create_sku_table.rs  m20240522_0010_create_sku_to_product_table.rs
migrations/: 20240302115707_create_slug_table.sql  20240307181600_create_category_table.sql  20240307181700_create_product_table.sql  20240322164831_add_dummy_data.sql  20240414053148_create_product_images.sql.sql  20241231235959_add_dummy_data.sql
scripts/: db_schema_init.sql  init_db.sh  schema.sql
scripts/migrations/: 0001_schema_init.sql  0002_seed_data.sql
settings/: cert.pem  certificate.crt  development.yaml  key.pem  private.key  production.yaml
src/: db.rs  lib.rs  main.rs  routes.rs  settings.rs  structs.rs  templates.rs
src/entities/: attribute.rs  attribute_value.rs  category.rs  category_description.rs  category_translation.rs  description.rs  gallery.rs  language.rs  media.rs  media_item.rs  media_media_set.rs  media_set.rs  media_set_entity.rs  media_to_item.rs  mod.rs  option.rs  prelude.rs  product.rs  product_description.rs  product_to_category.rs  product_translation.rs  sea_orm_active_enums.rs  sku.rs  sku_description.rs  sku_product.rs  sku_to_product.rs  slug.rs  variant.rs
src/middleware/: auth.rs
src/migrator/: m20240517_0001_create_category_table.rs  m20240517_0002_create_product_table.rs  m20240517_0003_create_product_to_category_table.rs  m20240517_0004_create_itemtype_enum.rs  m20240517_0005_create_language_table.rs  m20240517_0005_create_slug_table.rs  m20240519_0006_create_mediatype_enum.rs  m20240519_0007_create_media_table.rs  m20240519_0008_create_media_to_item_table.rs  m20240522_0010_create_sku_to_product_table.rs  m20240522_0011_create_slug_table.rs  mod.rs
src/models/: category.rs  product.rs
src/routes/: category.rs  category_page.rs  home_page.rs  mod.rs  not_found_page.rs  product.rs  product_page.rs  sku.rs  slug.rs
src/structs/: category.rs  description.rs  entity.rs  enums.rs  language.rs  media.rs  mod.rs  product.rs  sku.rs  slug.rs  traits.rs  user.rs
src/templates/: category.rs  category_page.rs  home_page.rs  index.rs  mod.rs  product.rs  product_page.rs  sku.rs
tests/: health_check.rs
