[package]
name = "shopp"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "shopp"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
migration = { path = "migration" }
futures = { version = "*" }
async-std = { version = "*" }
ntex = { version = "*", default-features = false, features = [
    "async-std",
    "openssl",
] }
openssl = { version = "*", features = ["v110", "vendored"] }
markup = { version = "*" }
uuid = { version = "*", features = [
    "v4",
    "fast-rng",
    "macro-diagnostics",
    "serde",
] }
serde = { version = "*", features = ["derive"] }
serde_json = { version = "*" }
config = { version = "*" }
ntex-files = { version = "*" }
once_cell = { version = "*" }
sea-orm = { version = "*", features = [
    "sqlx-postgres",
    "runtime-async-std-native-tls",
    "macros",
    "with-chrono",
    "with-uuid",
] }
[dev-dependencies]
curl = { version = "*" }

[workspace]
members = [".", "migration"]
