[package]
name = "migration"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "migration"
path = "src/lib.rs"

[dependencies]
async-std = { version = "1", features = ["attributes", "tokio1"] }
chrono = { version = "*" }
uuid = { version = "*", features = [
    "v4",
    "fast-rng",
    "macro-diagnostics",
    "serde",
] }

[dependencies.sea-orm-migration]
version = "0.12.0"
features = ["runtime-async-std-rustls", "sqlx-postgres"]
