[package]
name = "migration"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "migration"
path = "src/lib.rs"

[dependencies]
uuid = { version = "*", features = [
    "v4",
    "fast-rng",
    "macro-diagnostics",
    "serde",
] }
async-std = { version = "1", features = ["attributes", "tokio1"] }
chrono = { version = "*" }
sea-orm = { version = "*", features = [
    "sqlx-postgres",
    "runtime-async-std-native-tls",
    "macros",
    "with-chrono",
    "with-uuid",
] }

[dependencies.sea-orm-migration]
version = "0.12.0"
features = ["runtime-async-std-rustls", "sqlx-postgres"]

